# capstone_ros2_ws

./: README.md  frames_2026-04-13_12.34.56.gv
src/agri_control/: package.xml  setup.py
src/agri_control/agri_control/: joy_evdev_node.py  joy_simulator_node.py
src/crop_motor_driver/: package.xml  setup.cfg  setup.py
src/crop_motor_driver/crop_motor_driver/: motor_driver_node.py
src/crop_nav_bringup/: package.xml  setup.cfg  setup.py
src/crop_path_follower/: package.xml  setup.cfg  setup.py
src/crop_path_follower/crop_path_follower/: pure_pursuit_node.py
src/crop_row_perception/: package.xml  setup.cfg  setup.py
src/crop_row_perception/config/: nav2_params.yaml
src/crop_row_perception/crop_row_perception/: centerline_follower_node.py  centerline_node.py  cmd_vel_to_can_node.py  follow_centerline_nav2_node.py  leveled_cloud_node.py
src/motor_controller/: package.xml  setup.py
src/motor_controller/motor_controller/: motor_control_node.py
src/remote_controller/: package.xml  setup.py
src/remote_controller/launch/: autonomy_mode.launch.py  manual_mode.launch.py  robot_bringup.launch.py
src/remote_controller/remote_controller/: mode_manager_node.py  teleop_node.py
src/sprayer_vision/: package.xml  setup.cfg  setup.py
src/sprayer_vision/launch/: jetson_sprayer.launch.py
src/sprayer_vision/sprayer_vision/: cercospora_classifier_node.py  ground_crop_node.py  random_detection_gpio_node.py  random_detection_publisher_node.py  sprayer_gpio_node.py  yolo_detector_node.py
src/yolo11_ros2/: package.xml  setup.cfg  setup.py
(+3 files in other folders)
