<?xml version="1.0"?>
<package format="3">
  <name>crop_motor_driver</name>
  <version>0.0.1</version>
  <description>Motor command converter</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
